<resources>
    <string name="app_name" translatable="false">Estudiante - Materia</string>
    <string name="title_activity_pacientes" translatable="false">Entenador</string>
    <string name="title_activity_gestion" translatable="false">Gestión de Entrenador</string>
    <string name="txt_usuario" translatable="false">Nombre</string>
    <string name="btn_entrar" translatable="false">Entrar</string>
    <string name="btn_ges_pac" translatable="false">Gestionar Entrenador</string>
    <string name="btn_crear_pac" translatable="false">Crear Entrenador</string>
    <string name="txt_nom_pac" translatable="false">Nombres</string>
    <string name="txt_ape_pac" translatable="false">Apellidos</string>
    <string name="fec_nac_pac" translatable="false">Fecha de nacimiento</string>
    <string name="hijos_pac" translatable="false">N° Medallas</string>
    <string name="seguro_pac" translatable="false">Campeon Actual</string>
    <string name="btn_insertar" translatable="false">Crear</string>
    <string name="btn_eliminar" translatable="false">Eliminar</string>
    <string name="btn_actualizar" translatable="false">Actualizar</string>
    <string name="btn_ges_med" translatable="false">Gestionar Pokemon</string>
    <string name="btn_crear_med" translatable="false">Crear Pokemon</string>
    <string name="txt_nom_med" translatable="false">Nombre</string>
    <string name="txt_comp_med" translatable="false">Poder Uno</string>
    <string name="txt_uso_med" translatable="false">Poder Dor</string>
    <string name="fec_cad_med" translatable="false">Fecha de Captura</string>
    <string name="txt_num_pas_med" translatable="false">Numero Pokemon</string>
    <string name="txt_gra_med" translatable="false">Nivel</string>
    <string name="btn_mapa" translatable="false">Mapa</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="longitud" translatable="false">Longitud</string>
    <string name="latitud" translatable="false">Latitud</string>
</resources>

