<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".actividades.ActualizarMateria">

    <EditText
            android:layout_width="237dp"
            android:layout_height="44dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_num_pas_med_act"
            android:hint="@string/txt_num_pas_med"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="@+id/textView13" app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="235dp"
            android:layout_height="39dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_gra_med_act"
            android:hint="@string/txt_gra_med"
            app:layout_constraintTop_toTopOf="@+id/textView32"
            app:layout_constraintBottom_toBottomOf="@+id/textView32" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="235dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_uso_med_act"
            android:hint="@string/txt_uso_med"
            app:layout_constraintStart_toStartOf="@+id/txt_comp_med_act"
            app:layout_constraintEnd_toEndOf="@+id/txt_comp_med_act"
            app:layout_constraintTop_toTopOf="@+id/textView33"
            app:layout_constraintHorizontal_bias="1.0"
    />
    <EditText
            android:layout_width="232dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/txt_comp_med"
            android:id="@+id/txt_comp_med_act"
            app:layout_constraintStart_toStartOf="@+id/txt_num_pas_med_act"
            app:layout_constraintEnd_toEndOf="@+id/txt_num_pas_med_act" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_num_pas_med_act"/>
    <EditText
            android:layout_width="238dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nom_med_act"
            android:hint="@string/txt_nom_med"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView31"
            app:layout_constraintBottom_toBottomOf="@+id/textView31" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="Actualizar Película"
            android:layout_width="191dp"
            android:layout_height="55dp"
            android:id="@+id/btn_act_med_conf"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/txt_lat_act"
            app:layout_constraintVertical_bias="0.264"/>
    <EditText
            android:layout_width="233dp"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_lon_act"
            android:hint="@string/longitud" android:text="-78.459725"
            app:layout_constraintStart_toStartOf="@+id/txt_uso_med_act"
            app:layout_constraintEnd_toEndOf="@+id/txt_uso_med_act" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txt_uso_med_act"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_lat_act"
            android:hint="@string/latitud" android:text="-0.097662"
            app:layout_constraintStart_toStartOf="@+id/txt_lon_act"
            app:layout_constraintEnd_toEndOf="@+id/txt_lon_act" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_lon_act" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="Rating"
            android:layout_width="101dp"
            android:layout_height="27dp"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintEnd_toEndOf="@+id/textView32" app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold" android:textAllCaps="true" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView32"/>
    <TextView
            android:text="Nombre"
            android:layout_width="101dp"
            android:layout_height="30dp"
            android:id="@+id/textView31" android:textStyle="bold"
            android:textAllCaps="true" android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="36dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="Año Lanzamiento"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:id="@+id/textView32" android:textStyle="bold"
            android:textAllCaps="true" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            app:layout_constraintStart_toStartOf="@+id/textView31" app:layout_constraintEnd_toEndOf="@+id/textView31"/>
    <TextView
            android:text="Sinopsis"
            android:layout_width="85dp"
            android:layout_height="36dp"
            android:id="@+id/textView33" app:layout_constraintStart_toStartOf="@+id/textView34"
            app:layout_constraintEnd_toEndOf="@+id/textView34" app:layout_constraintTop_toBottomOf="@+id/textView34"
            android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.0" android:textStyle="bold"
            android:textAllCaps="true"/>
    <TextView
            android:text="Actores Principales"
            android:layout_width="107dp"
            android:layout_height="46dp"
            android:id="@+id/textView34" app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/textView13" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold" android:textAllCaps="true"/>
    <TextView
            android:text="Longuitud"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:id="@+id/textView35" app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintEnd_toEndOf="@+id/textView33" android:textStyle="bold" android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/textView33" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/latitud"
            android:layout_width="88dp"
            android:layout_height="31dp"
            android:id="@+id/textView36" android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@+id/textView35" app:layout_constraintEnd_toEndOf="@+id/textView35"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView35"
            android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>